algunos cambios requeridos por el 2016 de presupuesto de consulta de muelle de los bueyes

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -40,7 +40,7 @@
         <!--presupuesto de consulta muelle de los buelles -->
         <div class="row consultap">
             <div class="container text-center">
-                <h2 class="titularp">Ahora disponible el presupuesto de consulta de Muelle de los Buelles</h2>
+                <h2 class="titularp">Ahora disponible el presupuesto de consulta de Muelle de los Buelyes</h2>
                 <br />
                 <div class="col-md-offset-1 col-md-3">
                 <a href="">
@@ -58,8 +58,13 @@
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__periodo=&inversion__municipio=134">
+                    <a href="/core/plan-de-inversion/?inversion__anio=2016&inversion__periodo=&inversion__municipio=134">
                     <i class="fa fa-cogs fa-4x"></i><br />Inversi&oacute;n
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__periodo=&inversion__municipio=134">
+                    <i class="fa fa-question fa-4x"></i><br />Consultas?
                     </a>
                 </div>
             </div>
