--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -26,7 +26,9 @@
     </form>
     <ul id="oimTab" class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#asignados" aria-controls="asignados" role="tab" data-toggle="tab">Asignado y ejecutado anual</a></li>
-        <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
+        {% if year != '2016' %}
+            <li role="presentation"><a href="#oimmodificacion" aria-controls="oimmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
+        {% endif %}
         <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Información hist&oacute;rica</a></li>
     </ul>
 
@@ -210,7 +212,11 @@
             {% if municipio %}
                 <div class="col-md-6">
                 {% descargar_excel "ogm8" %}
-                <h3>Ranquin de municipio de misma categoría municipal</h3>
+                {% if year == '2016' %}
+                    <h3>Gastos por habitante</h3>
+                {% else %}
+                    <h3>Ranquin de municipio de misma categoría municipal</h3>
+                {% endif %}
                 <h4 class="text-info">Córdobas corrientes por habitante</h4>
                 <table class="table table-condensed">
                     <tr class="info"><th>Posición</th><th>Municipios</th> <th>P. Inicial</th>{% if year != '2016' %} <th>Ejecución</th>{% endif %}</tr>
