--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -44,7 +44,7 @@
                 <br />
                 <div class="col-md-2">
                 <a data-toggle="modal" data-target="#consultamb">
-                    <i class="fa fa-question fa-4x"></i><br />Consulta presupeustaria?
+                    <i class="fa fa-question fa-4x"></i><br />Consulta presupuestaria?
                 </a>
                 <!-- INICIA modal MB -->
                 <div class="modal fade" id="consultamb" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -66,27 +66,27 @@
                 <!-- FIN modal MB -->
                 </div>
                 <div class="col-md-2">
-                <a href="">
+                <a href="{% static 'Calendario-consulta.pdf' %}" target="_blank">
                     <i class="fa fa-calendar fa-4x"></i><br />Calendario de Consulta
                 </a>
                 </div>
                 <div class="col-md-2">
-                    <a href="/core/oim?year=2016&municipio=muelle-de-lod-bueyes">
+                    <a href="/core/oim?year=2016&municipio=muelle-de-lod-bueyes" target="_blank">
                     <i class="fa fa-cog fa-4x"></i><br />Ingresos
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a href="/core/ogm?year=2016&municipio=muelle-de-lod-bueyes">
+                    <a href="/core/ogm?year=2016&municipio=muelle-de-lod-bueyes" target="_blank">
                     <i class="fa fa-money fa-4x"></i><br />Gastos
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a href="/core/plan-de-inversion/?inversion__anio=2016&inversion__periodo=&inversion__municipio=134">
+                    <a href="/core/plan-de-inversion/?inversion__anio=2016&inversion__periodo=&inversion__municipio=134" target="_blank">
                     <i class="fa fa-cogs fa-4x"></i><br />Inversi&oacute;n
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__periodo=&inversion__municipio=134">
+                    <a href="http://consulta.mipresupuestomunicipal.org/" target="_blank">
                     <i class="fa fa-comments fa-4x"></i><br />Enmiendas y Consultas Ciudadanas
                     </a>
                 </div>
