titulo para pie chart en inversion

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -190,7 +190,7 @@
             </div>
         {% endif %}
         <br clear="all">
-        <div class="col-md-6"><div id='fuentes'>Fuentes will be rendered here.</div></div>
+        <div class="col-md-6"><h2>Fuentes de Inversión</h2><div id='fuentes'>Fuentes will be rendered here.</div></div>
         <!-- /fin inversion-tabla3-municipal -->
     </div>
     <div role="tabpanel" class="tab-pane fade" id="invmodificacion" aria-labelledby="invmodificacion-tab">
